--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest  # Usa um ambiente Linux para execução
     name: Execute R Script
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2  # Passo para obter os arquivos do repositório
+ # Passo para obter os arquivos do repositório
       - name: Instalar dependências do sistema
         run: |
           sudo apt-get update
@@ -21,10 +20,20 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2  # Configura o ambiente R
 
-      - name: Install R packages
-        run: |
-          R -e 'install.packages(c("tidyverse", "httr", "jsonlite", "aws.s3", "arrow"))'
-          
+      - name: Install packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            any::tidyverse 
+            any::httr
+            any::jsonlite
+            any::janitor
+            any::aws.s3
+            any:arrow
+
+      - name: Check out repository
+        uses: actions/checkout@v3
+
       - name: Run Campinas Script
         run: |
           Rscript upload_api.R  # Executa o seu script
