--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,51 @@
+name: Run R Script with Cache
 
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '*/30 * * * *'  # Executar a cada 30 minutos
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Configurar repositório
+      uses: actions/checkout@v2
+
+    - name: Configurar cache para pacotes R
+      uses: actions/cache@v3
+      with:
+        path: ~/.R/library
+        key: ${{ runner.os }}-R-${{ hashFiles('**/DESCRIPTION') }}-package-cache
+        restore-keys: |
+          ${{ runner.os }}-R-
+      env:
+        R_LIBS_USER: ~/.R/library
+
+    - name: Instalar dependências do sistema
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libharfbuzz-dev libfribidi-dev libfontconfig1-dev libfreetype6-dev
+
+    - name: Configurar diretório de bibliotecas R
+      run: |
+        mkdir -p ~/.R/library
+        echo "R_LIBS_USER=~/.R/library" >> ~/.Renviron
+
+    - name: Instalar pacotes R, se necessário
+      run: |
+        R -e 'packages <- c("tidyverse", "httr", "jsonlite", "aws.s3", "arrow");
+              missing <- setdiff(packages, rownames(installed.packages()));
+              if(length(missing) > 0) install.packages(missing, dependencies=TRUE)'
+
+    - name: Definir variáveis de ambiente do AWS
+      run: |
+        echo "AWS_ACCESS_KEY_ID="AKIAZXAS4GOK2EW22DO7"${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.Renviron
+        echo "AWS_SECRET_ACCESS_KEY="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"${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.Renviron
+        echo "AWS_DEFAULT_REGION="sa-east-1"${{ secrets.AWS_DEFAULT_REGION }}" >> ~/.Renviron
+        echo "TZ="America/Sao_Paulo"${{ secrets.TZ }}" >> ~/.Renviron
+
+    - name: Executar script R
+      run: |
+        Rscript upload.api.R
