--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: MyRScript
 Type: Script
 Title: R Script for Uploading Data
 Version: 0.1.0
-Author: Seu Nome <seu.email@dominio.com>
-Description: Esse script R é usado para automatizar o upload de dados para AWS usando httr.
+Author: OO
+Description: OO
 License: MIT
 Encoding: UTF-8
 LazyData: true
