--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Configurar repositório
       uses: actions/checkout@v2
 
+    - name: Instalar R
+      uses: r-lib/actions/setup-r@v2
+      with:
+        r-version: '4.4.2'  
+        
     - name: Configurar cache para pacotes R
       uses: actions/cache@v3
       with:
