--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,10 @@ jobs:
       uses: r-lib/actions/setup-r@v2
       with:
         r-version: '4.4.1'  
-        
+    - name: Instalar dependências do sistema
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libharfbuzz-dev libfribidi-dev libfontconfig1-dev libfreetype6-dev libicu-dev
     - name: Configurar cache para pacotes R
       uses: actions/cache@v3
       with:
